# compressed-image

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build_and_repair_wheel.py  pyproject.toml  vckpg.json  vcpkg.json
.github/workflows/: cmake-build.yml  cmake-test.yml  cmake-valgrind.yml  cmake-wheels.yml
CompressedImage/: CMakeLists.txt
CompressedImage/include/: CompressedImage.h  Macros.h
CompressedImage/include/compressed/: algorithm.h  blosc2_wrapper.h  channel.h  constants.h  enums.h  fwd.h  image.h  implementation.h  iterator.h  macros.h  strided_span.h
CompressedImage/include/compressed/containers/: chunk_span.h  strided_span.h  strided_span_group.h
CompressedImage/include/compressed/iterators/: group_iterator.h  iterator.h  strided_iterator.h
CompressedImage/src/: main.cpp
benchmark/: CMakeLists.txt  main.cpp  memory_tracker.h
compressed_image/: CMakeLists.txt
compressed_image/include/compressed/: blosc2_lazyschunk.h  blosc2_wrapper.h  channel.h  constants.h  enums.h  fwd.h  image.h  image_algo.h  implementation.h  json_alias.h  ranges.h  util.h
compressed_image/include/compressed/blosc2/: lazyschunk.h  schunk.h  schunk_mixin.h  util.h  wrapper.h
compressed_image/include/compressed/containers/: chunk_span.h
compressed_image/include/compressed/detail/: oiio_util.h  scoped_timer.h
compressed_image/include/compressed/iterators/: iterator.h
docs/: CMakeLists.txt  Doxyfile.in  benchmarks.rst  best_practices.rst  conf.py  index.rst  requirements.txt
docs/code-ref/: channel.rst  enums.rst  image.rst  iterators.rst  main.rst
docs/concepts/: compression.rst
docs/developer/: building.rst  main.rst  python.rst  testing.rst
docs/examples/: lazy_channels.rst  main.rst  modifying_image.rst  read_from_file.rst  read_with_postprocess.rst
examples/initialize_from_file/: CMakeLists.txt  main.cpp  main.py
examples/lazy_channels/: CMakeLists.txt  main.cpp  main.py
examples/modifying_image/: CMakeLists.txt  main.cpp  main.py
examples/read_from_file/: CMakeLists.txt  main.cpp  main.py
examples/read_with_postprocess/: CMakeLists.txt  main.cpp
examples/tmp/: CMakeLists.txt  main.cpp
python/: CMakeLists.txt  README.md
python/bindings/: bind_channel.h  bind_image.h
python/bindings/util/: dtype_util.h
python/bindings/wrappers/: dynamic_channel.h  dynamic_image.h
python/compressed_image/: bind_channel.h  bind_enums.h  bind_image.h  main.cpp
python/compressed_image/util/: variant_t.h
python/compressed_image/wrappers/: dynamic_channel.h  dynamic_image.h
python/py_module/compressed_image/: __init__.py
python/py_module/compressed_image/_stubs/: _compressed_image.pyi
python/stubs/: compressed_image.pyi
python/test/: __init__.py  include_build_path.py  test_channel.py  test_enums.py  test_image.py
test/: CMakeLists.txt  main.cpp
test/src/: test_channel.cpp  test_chunk_span.cpp  test_image.cpp  test_iterator.cpp  test_schunk.cpp  test_zip.cpp  util.h
